--- a/Reservia.css
+++ b/Reservia.css
@@ -4,7 +4,7 @@ body
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
     border-right: 1px solid rgb(214, 211, 211);
-    margin: 2% 5%;     
+    margin: 3% 5%;     
 }
 
 /*header*/
@@ -185,7 +185,7 @@ h1, h2
     justify-content: space-between;
     flex-direction: row;
     margin-top: 30px; 
-    margin-right: 1%; 
+    margin-right: 1.5%; 
 }
 strong
 {
@@ -349,7 +349,7 @@ strong
 .activites-marseille
 {
     margin-top: 50px;
-    margin-right: 3%;
+    margin-right: 1%;
 }
 .activites-marseille-cartes
 {  
@@ -982,14 +982,12 @@ margin-top: 10px;
    }    
    .activites-marseille
    {
-       margin-right: 0%;
+       margin-right: -2%;
    }
    .activites-marseille-cartes
    {  
        display: flex;
        flex-wrap: wrap;
-       margin-right: 20px;
-       margin-bottom: 20px;
        width: 99%;
 
    } 
@@ -1064,7 +1062,8 @@ margin-top: 10px;
    }
    footer
     {   
-    padding: 2% 8% 2% 5%;
+      padding: 2% 8% 2% 5%;
+      margin-top: 50px;
     }
   
       
@@ -1075,8 +1074,12 @@ margin-top: 10px;
        
     body
     {
-       margin: 3% 1%;
+       margin: 3% 0.5%;
        font-size: 1.1em;
+    }
+    h3
+    {
+        font-size: 1.1em;
     }
     .formulaire-filtre
     { 
@@ -1152,19 +1155,18 @@ margin-top: 10px;
 
   .activites-marseille
   {
-      margin-right: 0%;
+      margin-right: -1.5%;
+      margin-left: 0.5%;
   }
   .activites-marseille-cartes
   {  
       display: flex;
       flex-wrap: wrap;
-      margin-right: 10px;
-      margin-bottom: 10px;
       width: 99%;
-
   } 
   .activites-marseille-port
   {
+      order:1;
       flex-basis: 30%;
   }
  
@@ -1175,7 +1177,7 @@ margin-top: 10px;
     min-width: 100%;
   }
   .activites-marseille-pomegues
-  {
+  {   order: 2;
       flex-basis: 30%;
   }
    .activites-marseille-pomegues img
@@ -1187,7 +1189,8 @@ margin-top: 10px;
    }
   
   .activites-marseille-frioul
-  {   
+  {    
+      order:4;
       margin-bottom: 0px; 
       flex-basis: 30%;
   
@@ -1196,10 +1199,11 @@ margin-top: 10px;
   {   
       object-fit: cover;
        height: 200px;
-       min-width: 100%; 
+       max-width: 100%; 
   }
   .activites-marseille-calanques
-  {
+  {   
+      order:3;
       flex-basis: 30%;
   }
   .activites-marseille-calanques img
@@ -1209,7 +1213,8 @@ margin-top: 10px;
        min-width: 100%;
   }
   .activites-marseille-dame-garde
-  {
+  {  
+     order:5;
      margin-bottom: 0px;
      flex-basis: 30%;
      
@@ -1222,7 +1227,7 @@ margin-top: 10px;
   
   }
   .activites-marseille-longchamp
-  {
+  {  order:6;
      margin-top: 0px;
      flex-basis: 30%
   }
@@ -1230,12 +1235,13 @@ margin-top: 10px;
   {   
       object-fit: cover;
       height: 200px;
-      min-width: 100%;
-  
+     min-width: 100%;
   }
+  
   footer
    {   
-   padding: 2% 15% 2% 5%;
+     padding: 2% 15% 2% 5%;
+     margin-top: 50px;
    }
 
 
