--- a/Reservia.css
+++ b/Reservia.css
@@ -4,7 +4,7 @@ body
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
     border-right: 1px solid rgb(214, 211, 211);
-    margin: 3% 5%;     
+    margin: 3%;     
 }
 
 /*header*/
@@ -125,6 +125,7 @@ h1, h2
 {
    color:darkmagenta;
    background-color:powderblue;
+   border-radius: 30px;
 }
 
 
