--- a/Reservia.css
+++ b/Reservia.css
@@ -574,6 +574,7 @@ margin-top: 10px;
     {
       display: block;
       position: relative;
+      border-bottom: solid 2px  #F2F2F2;
      }
      
     nav ul 
@@ -591,29 +592,30 @@ margin-top: 10px;
     {   
         display: inline_block;
         position: relative;
-        right: 34%;
-        padding: 0% 100% 20px 30%;
+        right: 27%;
+        padding: 0% 20% 20px 25%;
         width: 50%;
+        top: 20px;
     }
     .link-hebergements:hover 
     {   
         border-top: none;
-        border-bottom: solid #0065FC 2px;
+        border-bottom: solid #0065FC 3px;
     }
     .link-activites
     {
         display: inline_block;
         position: relative;
-        top: -20px;
-        left: 50%;
+        bottom: 2px;
+        left: 60%;
         width:50%;
-        padding: 0% 30% 20px 30%;
+        padding: 0% 30% 20px 20%;
     
     }
     .link-activites:hover 
     {   
         border-top: none;
-        border-bottom: solid #0065FC 2px;
+        border-bottom: solid #0065FC 3px;
     }
     h1 
     {
