--- a/Reservia.css
+++ b/Reservia.css
@@ -538,27 +538,6 @@ footer li
 margin-top: 10px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media screen and (min-width:375px) and (max-width:767px)     
 {
      body  
@@ -609,7 +588,6 @@ margin-top: 10px;
         position: relative;
         bottom: 2px;
         left: 65%;
-        
         padding: 0% 18% 20px 15%;
     
     }
@@ -620,7 +598,7 @@ margin-top: 10px;
     }
     h1 
     {
-        font-size: 1.2em;
+        font-size: 1.3em;
     }
     h3
     {
@@ -633,9 +611,10 @@ margin-top: 10px;
     }
 
      .recherche input 
-     { font-size: 1em;
+     {
+        font-size: 1em;
         border-radius: 0px 17px 17px 0px;
-        padding: 2% 10% 2% 5%;
+        padding: 2% 15% 2% 5%;
         
      }
     .formulaire button 
@@ -671,7 +650,7 @@ margin-top: 10px;
     .link-filtre 
    {  
     margin-bottom: 10px;
-    margin-right: 10px;  
+    margin-right: 5px;  
    } 
    .info i
    {   
@@ -701,7 +680,7 @@ margin-top: 10px;
        order: 1;
        border-radius: 0px;
        margin-left: -1%;
-       margin-right: -3%;
+       margin-right: -1.5%;
    }
    .populaires-cartes
     {
@@ -871,7 +850,7 @@ margin-top: 10px;
    {
      margin: 15px 0px 20px 20px;
    }
-   
+   /*footer*/
    footer
    {   
        margin-top: 50px;
@@ -882,21 +861,8 @@ margin-top: 10px;
        padding: 20px 0px 20px 50px;
        margin-left: -4%;
    }
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-   
+  
 @media screen and (min-width:768px) and (max-width:1000px)
 {
     body
@@ -904,7 +870,7 @@ margin-top: 10px;
        margin: 5% 1%;
        font-size: 1.1em;
     }
-
+     /*header*/
     .filtres
     {
     flex-direction: column;
@@ -932,6 +898,7 @@ margin-top: 10px;
        margin-top: 30px;
        margin-right: 10%;
    }
+   /*main*/
    .les-hotels
    {
      display: flex;
@@ -1083,17 +1050,15 @@ margin-top: 10px;
        object-fit: cover;
        height: 200px;
        min-width: 100%;
-   
    }
+   /*footer*/
    footer
     {   
       padding: 2% 8% 2% 5%;
       margin-top: 50px;
     }
-  
-      
-
 }
+
 @media screen and (min-width:1001px)and (max-width:1279px) 
 {
        
@@ -1102,6 +1067,7 @@ margin-top: 10px;
        margin: 4% 1.5%;
        font-size: 1.05em;
     }
+    /*header*/
     h3
     {
         font-size: 1em;
@@ -1266,14 +1232,12 @@ margin-top: 10px;
       height: 200px;
      min-width: 100%;
   }
-  
+  /*footer*/
   footer
    {   
      padding: 2% 15% 2% 5%;
      margin-top: 50px;
    }
-
-
 }
 
 
