--- a/Reservia.css
+++ b/Reservia.css
@@ -73,7 +73,7 @@ h1, h2
 {
     color: black;
     font-size: 1.2em;
-    font-family: 'raleway' sans-serif;
+    font-family: 'Raleway',sans-serif;
 }
 .formulaire
 {
@@ -83,8 +83,8 @@ h1, h2
 }
 .location-icon
 {   
-     font-size: 18px;
-     border: solid 1px #F2F2F2;
+     font-size: 18px ;
+     border: solid 1px #F2F2F3;
      border-radius: 17px 0px 0px 17px;
      padding: 17px;
      background-color: #F2F2F2;
@@ -104,7 +104,7 @@ h1, h2
 {    
     font-size: 1.2em;
     color: white;
-    border: 1px solid #0065FC; 
+    border: 1px solid #0065FD; 
     border-radius: 0px 15px 15px 0px;
     background-color: #0065FC;
     padding: 10px 20px 10px 15px;
@@ -149,7 +149,7 @@ h1, h2
     justify-content: center;
     font-size: 18px;
     color:  #0065FC;
-    border: solid 1px  #DEEBFF;
+    border: solid 1px  #dfeafa;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -208,7 +208,7 @@ strong
 .hebergements-marseille
 {  
     flex-basis: 65%;
-    border: 1px #F2F2F2 solid;
+    border: 1px #F2F2F3 solid;
     border-radius: 20px;
     background-color:  #F2F2F2;
     /*padding: 20px 10px 40px 40px; */
@@ -287,7 +287,7 @@ strong
 .populaires
 { 
  flex-basis: 32%;
- border: solid 1px  #F2F2F2;
+ border: solid 1px  #F2F2F3;
  border-radius: 20px;
  background-color:  #F2F2F2;
  /*padding: 10px 10px 0px 30px;*/
@@ -570,7 +570,7 @@ margin-top: 10px;
     } 
     .link-hebergements
     {   
-        display: inline_block;
+        
         position: relative;
         right: 25%;
         padding: 0% 20% 20px 25%;
@@ -584,7 +584,7 @@ margin-top: 10px;
     }
     .link-activites
     {
-        display: inline_block;
+    
         position: relative;
         bottom: 2px;
         left: 65%;
@@ -630,7 +630,7 @@ margin-top: 10px;
     {    
         display: inline-block;
         color: white;
-        border: 1px solid #0065FC; 
+        border: 1px solid #0065FD; 
         border-radius: 17px;
         background-color: #0065FC;
         padding: 15px 20px 20px 20px;
